# INDiETests

./: .gitignore  CMakeLists.txt  UnpackedINDiETests  indieTestsTraces  indieTestsTracesLeft  indieTestsUnpacked2  main.cpp  plots.ipynb  tests.ipynb  tracePlotEx.cpp  traceViewer.cpp
inc/: MultiTracePlotter.hh  MultiVelocity.h  Positioner.hh  Trace.hh  TracePlotter.hh  VelocityMeasurement.h  WalkCorrector.h  attenuation.hh  attenuationPositioner.h  dig_daq_param.hh  gaussFitter.h  multiAttenuation.h  timeWriter.hh
output/: attenuationParams.txt  attn2.root  attn_10.root  attn_11.root  attn_12.root  attn_14.root  attn_2.root  attn_3.root  attn_4.root  attn_5.root  attn_6.root  attn_7.root  attn_8.root  attn_9.root  centerPositionTest.root  multiGraph.root  positionParamsPoly2.txt  positionParamsPoly2ThenFlat.txt  speedOfLightParams.txt  timeOffsets.txt  traceShapes.root  traceShapesFree.root  traceShapesVar.root  velocity.root  walkCorrecter2.root  walkCorrecterPars.txt  walkCorrecterVectors.txt  walkCorrecterVectors2.txt
src/: MultiTracePlotter.cpp  MultiVelocity.cpp  Positioner.cpp  Trace.cpp  TracePlotter.cpp  VelocityMeasurement.cpp  WalkCorrector.cpp  attenuation.cpp  attenuationPositioner.cpp  gaussFitter.cpp  multiAttenuation.cpp  timeWriter.cpp
